<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">智能开关</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_version">v0.3.4.3</string>
    <string name="tvApSsidTitle">名称:&#160;&#160;</string>
    <string name="tvPasswordTitle">密码:&#160;&#160;</string>
    <string name="switchIsSsidHiddenTitle">是否隐藏WIFI名称</string>
    <string name="spinnerTaskResultCountTitle">任务数量</string>
    <string name="btnConfirmTitle">开始配网</string>
    <string name="action_bar_edit_text">编辑</string>
    <string name="action_bar_time_task">定时</string>
    <string name="action_bar_bind_device">绑定设备</string>
    <string name="device_id">设备编号：</string>
    <string name="action_bar_one_key">一键配网</string>
    <string name="action_sign_in">登录</string>
    <string name="prompt_email">用户名</string>
    <string name="user_id_hint">用户名(必填)</string>
    <string name="psw_hint">密码(必填)</string>
    <string name="user_name_hint">昵称(必填)</string>
    <string name="prompt_password">密码</string>
    <string name="forget_psw">忘记密码</string>
    <string name="register">立即注册</string>
</resources>
